postgres user/password security framework use middleware to filter formList and submissions responses by user

--- a/package.json
+++ b/package.json
@@ -36,8 +36,11 @@
     "cors": "^2.7.1",
     "debug": "^2.2.0",
     "express": "^4.13.3",
+    "express-jwt": "^5.1.0",
+    "express-unless": "^0.3.0",
     "graceful-fs": "^4.1.6",
     "json2csv": "^3.7.2",
+    "jsonwebtoken": "^7.3.0",
     "libxmljs": "^0.16.1",
     "mkdirp": "^0.5.1",
     "multiparty": "^4.1.2",
@@ -45,6 +48,7 @@
     "on-finished": "^2.3.0",
     "openrosa-form-submission-middleware": "^1.0.4",
     "openrosa-formlist": "^1.0.1",
+    "pg-promise": "^5.5.7",
     "python-shell": "^0.2.0",
     "q": "^1.4.1",
     "recursive-readdir": "^1.3.0",
