--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express": "^4.13.3",
     "express-jwt": "^5.1.0",
     "express-unless": "^0.3.0",
+    "express-validator": "^3.1.2",
     "graceful-fs": "^4.1.6",
     "json2csv": "^3.7.2",
     "jsonwebtoken": "^7.3.0",
