vw_omk_user docs

--- a/docs/custom-api-spec.yaml
+++ b/docs/custom-api-spec.yaml
@@ -221,6 +221,66 @@ paths:
                       type: boolean
                       description: read privileges
 
+  /tables/vw_omk_users:
+    get:
+      security:
+        - Bearer: []
+      summary: Get user list
+      description: Get list of all users
+      tags:
+        - table
+      responses:
+        '200':
+          description: An array of user details
+          schema:
+            type: array
+            items:
+              type: object
+              description: User Role object
+              properties:
+                id:
+                  type: integer
+                  descrption: user id
+                username:
+                  type: string
+                  descrption: username
+                email:
+                  type: string
+                  descrption: email address
+                first_name:
+                  type: string
+                  descrption: first name
+                last_name:
+                  type: string
+                  descrption: last_name
+                role:
+                  type: string
+                  descrption: user role - "admin" , "write" , "read"
+                created_by:
+                  type: string
+                  description: username of admin user who created record
+                updated_by:
+                  type: string
+                  description: username of admin user who edited record
+                created_date:
+                  type: string
+                  description: Timestamp of record creation
+                updated_by:
+                  type: string
+                  description: Timestamp of record update
+                admin:
+                  type: boolean
+                  description: admin privileges
+                write:
+                  type: boolean
+                  description: write privileges
+                read:
+                  type: boolean
+                  description: read privileges
+                num_forms:
+                  type: integer
+                  description: total number of associated forms
+
   /users/authenticate:
     post:
       security:
