--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "q": "^1.4.1",
     "recursive-readdir": "^1.3.0",
     "request": "^2.72.0",
+    "rmdir": "^1.2.0",
     "serve-index": "^1.7.2",
     "traverse": "^0.6.6",
     "type-is": "^1.6.10",
