--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "express-jwt": "^5.1.0",
     "express-unless": "^0.3.0",
     "express-validator": "^3.1.2",
+    "fs": "0.0.1-security",
     "graceful-fs": "^4.1.6",
     "json2csv": "^3.7.2",
     "jsonwebtoken": "^7.3.0",
@@ -65,6 +66,8 @@
     "xtend": "^4.0.1"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-things": "^0.2.0",
     "faucet": "0.0.1",
     "grunt": "^1.0.1",
     "grunt-contrib-clean": "^1.0.0",
